--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -128,7 +128,7 @@
     
     <div class="email" onclick="showConfetti()">Kliknij tutaj, by wyświetlić e-mail</div>
     
-    <div class="note">📩 Otwarte na współpracę. Napisz do mnie!</div>
+    <div class="note">📩 Otwarta na współpracę. Napisz do mnie!</div>
   </div>
 
   <script>
